--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "displayName": "Copy Code as Snippet",
   "description": "Extension that copies the contents of the current file to the clipboard in Markdown code block format",
   "version": "0.0.1",
+  "publisher": "dongminyu",
   "author": "Dongmin Yu <ydm2790@gmail.com> (https://github.com/AndrewDongminYoo)",
   "license": "MIT",
   "icon": "images/COPY.png",
   "engines": {
     "vscode": "^1.98.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AndrewDongminYoo/turbo-flutter-log"
+  },
+  "bugs": {
+    "url": "https://github.com/AndrewDongminYoo/turbo-flutter-log/issues",
+    "email": "ydm2790@gmail.com"
   },
   "categories": [
     "AI",
