feat: ✨ add configuration options and enhance snippet generation
This commit introduces the following features and improvements:

-   Adds configuration options to `package.json` for:
    -   `copy-code-as-snippet.includeFilePath`:  A boolean to control whether the file path is included in the snippet. Defaults to `true`.
    -   `copy-code-as-snippet.format`: A string to specify the snippet format (markdown, plain, html). Defaults to `markdown`.
-   Enhances snippet generation in `src/extension.ts` to:
    -   Read configuration options for `includeFilePath` and `format`.
    -   Support Markdown, HTML, and plain text snippet formats.
    -   Include file path in the snippet based on the `includeFilePath` configuration.
    -   Detect language based on file path and extension, including specific handling for `build.gradle` and `Dockerfile`.
    -   Use selected text if a selection exists, otherwise use the entire document content.
    -   Add workspace folder context to relative path calculation.
    -   Implement HTML escaping for HTML snippets.
-   Adds a `SnippetFormat` enum for supported snippet formats.
-   Adds helper functions for creating Markdown and HTML snippets.
-   Improves error handling when copying to the clipboard.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,27 @@
         "command": "copy-code-as-snippet.copy",
         "title": "Copy Code as Snippet"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "Copy Code as Snippet",
+      "properties": {
+        "copy-code-as-snippet.includeFilePath": {
+          "type": "boolean",
+          "default": true,
+          "description": "Whether to include the file path in the snippet"
+        },
+        "copy-code-as-snippet.format": {
+          "type": "string",
+          "enum": [
+            "markdown",
+            "plain",
+            "html"
+          ],
+          "default": "markdown",
+          "description": "Code snippet format (markdown, plain, html)"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "yarn run package",
