--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,29 +2,30 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.22.11
+  version: 1.24.0
 # Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 plugins:
   sources:
     - id: trunk
-      ref: v1.6.7
+      ref: v1.7.0
       uri: https://github.com/trunk-io/plugins
 # Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
 runtimes:
   enabled:
-    - node@18.20.5
+    - node@22.16.0
     - python@3.10.8
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
-    - checkov@3.2.390
-    - eslint@9.22.0
+    - oxipng@9.1.5
+    - checkov@3.2.435
+    - eslint@9.27.0
     - git-diff-check
-    - markdownlint@0.44.0
-    - osv-scanner@2.0.0
+    - markdownlint@0.45.0
+    - osv-scanner@2.0.2
     - prettier@3.5.3
-    - trufflehog@3.88.18
-    - yamllint@1.36.2
+    - trufflehog@3.88.35
+    - yamllint@1.37.1
 actions:
   enabled:
     - trunk-announce
